--- a/Application/app/src/main/res/layout/activity_hard_mode.xml
+++ b/Application/app/src/main/res/layout/activity_hard_mode.xml
@@ -10,7 +10,7 @@
         android:id="@+id/TxHead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Easy Difficulty"
+        android:text="Hard Difficulty"
         android:textSize="25dp"
         android:background="@color/teal_200"
         android:layout_alignParentTop="true"
@@ -43,79 +43,79 @@
         android:textSize="25dp"/>
 
     <ImageButton
-        android:id="@+id/Circle1_e"
+        android:id="@+id/Circle1_h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/TX1"
-        android:paddingTop="150dp"
-        android:paddingRight="150dp"
+        android:paddingTop="50dp"
+        android:paddingRight="50dp"
         android:layout_marginTop="60dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="280dp"
         android:background="@drawable/red_circle"
-        android:onClick="Circle1_e"/>
+        android:onClick="Circle1_h"/>
 
     <ImageButton
-        android:id="@+id/Circle2_e"
+        android:id="@+id/Circle2_h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Circle1_e"
-        android:paddingTop="150dp"
-        android:paddingRight="150dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginLeft="200dp"
+        android:layout_below="@id/Circle1_h"
+        android:paddingTop="50dp"
+        android:paddingRight="50dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginLeft="20dp"
         android:background="@drawable/blue_circle"
-        android:onClick="Circle2_e"
+        android:onClick="Circle2_h"
         android:visibility="invisible"/>
 
     <ImageButton
-        android:id="@+id/Circle3_e"
+        android:id="@+id/Circle3_h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Circle1_e"
-        android:paddingTop="150dp"
-        android:paddingRight="150dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="10dp"
+        android:layout_below="@id/Circle1_h"
+        android:paddingTop="50dp"
+        android:paddingRight="50dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="150dp"
         android:background="@drawable/red_circle"
-        android:onClick="Circle3_e"
+        android:onClick="Circle3_h"
         android:visibility="invisible"/>
 
     <ImageButton
-        android:id="@+id/Circle4_e"
+        android:id="@+id/Circle4_h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/TX2"
-        android:paddingTop="150dp"
-        android:paddingRight="150dp"
-        android:layout_marginTop="90dp"
-        android:layout_marginLeft="240dp"
+        android:paddingTop="50dp"
+        android:paddingRight="50dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginLeft="280dp"
         android:background="@drawable/blue_circle"
-        android:onClick="Circle4_e"
+        android:onClick="Circle4_h"
         android:visibility="invisible"/>
 
     <ImageButton
-        android:id="@+id/Circle5_e"
+        android:id="@+id/Circle5_h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/Circle4_e"
-        android:paddingTop="150dp"
-        android:paddingRight="150dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="220dp"
+        android:layout_below="@id/TX2"
+        android:paddingTop="50dp"
+        android:paddingRight="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="70dp"
         android:background="@drawable/red_circle"
-        android:onClick="Circle5_e"
+        android:onClick="Circle5_h"
         android:visibility="invisible"/>
 
     <Button
-        android:id="@+id/BTScore_e"
+        android:id="@+id/BTScore_h"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="View Score"
         android:textSize="20dp"
-        android:layout_below="@id/Circle1_e"
+        android:layout_below="@id/Circle2_h"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:onClick="Score_e"
+        android:layout_marginTop="20dp"
+        android:onClick="Score_h"
         android:visibility="invisible"/>
 
 </RelativeLayout>
