--- a/Application/app/src/main/res/layout/activity_easy_mode.xml
+++ b/Application/app/src/main/res/layout/activity_easy_mode.xml
@@ -21,6 +21,16 @@
         android:paddingBottom="10dp"/>
 
     <TextView
+        android:id="@+id/TXInstuctions"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/TxHead"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:text="Click the red and blue circles"
+        android:textSize="22dp"/>
+
+    <TextView
         android:id="@+id/TX1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,7 +39,8 @@
         android:layout_marginLeft="160dp"
         android:layout_marginTop="50dp"
         android:text="Score: "
-        android:textSize="25dp"/>
+        android:textSize="26dp"
+        android:textColor="#1CE6FF"/>
 
     <TextView
         android:id="@+id/TX2"
@@ -40,7 +51,8 @@
         android:layout_centerHorizontal="false"
         android:layout_marginTop="50dp"
         android:text="0"
-        android:textSize="25dp"/>
+        android:textSize="26dp"
+        android:textColor="#1CE6FF"/>
 
     <ImageButton
         android:id="@+id/Circle1_e"
